# forge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  cinema.example.toml  flake.nix  forge.example.toml  forge.toml  generate.sh  readme.md  spine.toml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-bun.yml  publish.yml  release.yml
core/: Cargo.toml
core/src/: config.rs  db.rs  error.rs  events.rs  fs.rs  health.rs  http.rs  lib.rs  logging.rs  main.rs  module.rs  platform.rs  proxy.rs  storage.rs  ws.rs
frontend/: README.md  openapi.json  orval.config.ts  package.json  svelte.config.js  vite.config.ts
frontend/apps/dashboard/: package.json  svelte.config.js
frontend/src/lib/: api.gen.ts  topbar.svelte.ts  utils.ts
frontend/src/lib/components/: DownloadButton.svelte  GradientOverlay.svelte  MediaInfo.svelte  PlayCard.svelte  PosterStack.svelte  Spinner.svelte  TopBar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[type]/[id]/: +page.svelte
frontend/src/routes/[type]/[id]/play/[infoHash]/[fileIdx]/: +page.svelte
migrations/: 20260326000001_watchlist.sql
modules/cinema/: Cargo.toml
modules/cinema/frontend/: openapi.json  orval.config.ts  package.json  svelte.config.js  ws-client-msg.schema.json  ws-server-msg.schema.json
modules/cinema/frontend/src/lib/: api.gen.ts  utils.ts  watch-party.svelte.ts  ws-client-msg.gen.ts  ws-server-msg.gen.ts
modules/cinema/frontend/src/lib/components/: CyclingBackdrop.svelte  EpisodeDetail.svelte  MediaInfo.svelte  PlayCard.svelte  SeasonBrowser.svelte  StreamList.svelte  TopBar.svelte  VideoPlayer.svelte
modules/cinema/frontend/src/routes/: +layout.svelte  +page.svelte
modules/cinema/frontend/src/routes/[type]/[id]/: +page.svelte
modules/cinema/frontend/src/routes/[type]/[id]/play/[infoHash]/[fileIdx]/: +page.svelte
modules/cinema/frontend/src/routes/party/: +page.svelte
modules/cinema/frontend/src/routes/party/[code]/: +page.svelte
modules/cinema/migrations/: 20260326000000_watch_history.sql  20260326000001_watchlist.sql  20260327000000_downloads.sql
modules/cinema/src/: config.rs  downloads.rs  hls.rs  lib.rs  routes.rs  streams.rs  subtitles.rs  tmdb.rs  torrent.rs  watch_party.rs
modules/movies/: Cargo.toml
modules/movies/frontend/: openapi.json  orval.config.ts  package.json  svelte.config.js  vite.config.ts
modules/movies/frontend/src/lib/: api.d.ts  api.gen.ts  api.ts  utils.ts
modules/movies/frontend/src/lib/components/: CyclingBackdrop.svelte  EpisodeDetail.svelte  SeasonBrowser.svelte  VideoPlayer.svelte
modules/movies/frontend/src/routes/: +layout.svelte  +page.svelte
modules/movies/frontend/src/routes/[type]/[id]/: +page.svelte
modules/movies/frontend/src/routes/[type]/[id]/play/[infoHash]/[fileIdx]/: +page.svelte
modules/movies/src/: config.rs  lib.rs  routes.rs  streams.rs  tmdb.rs  torrentio.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
src/: app.rs  config.rs  downloads.rs  hls.rs  logging.rs  main.rs  proxy.rs  routes.rs  streams.rs  subtitles.rs  tmdb.rs  torrent.rs
