[workspace]
resolver = "3"
members = ["core", "server", "modules/*"]

[workspace.dependencies]
axum = { version = "0.8.8", features = ["ws"] }
schemars = "0.8"
rand = "0.8"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
