[package]
name = "cinema"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cinema"
path = "src/main.rs"

[dependencies]
# Web
axum = "0.8.8"
tower-http = { version = "0.6", features = ["fs"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }

# Database
sqlx = { version = "0.8.6", features = ["any", "sqlite", "postgres", "mysql", "runtime-tokio", "migrate"] }

# Async
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.0"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"

# Torrent
librqbit = "8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nu-ansi-term = "0.50"

# Misc
urlencoding = "2.1.3"
bytes = "1"
hex = "0.4"
mime_guess = "2"
libc = "0.2"
