
[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
broadcast = "0.1.0"
md5 = "0.8.0"
reqwest = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.149"
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nu-ansi-term = "0.50"
tower-http = { version = "0.6", features = ["fs"] }
