[package]
name = "cinema"
version = "0.1.0"
edition = "2024"

[dependencies]
forge = { path = "../../core" }
sqlx = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
urlencoding = "2.1.3"
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
futures = "0.3"
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
